<?xml version="1.0" encoding="utf-8"?>
<!--
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>

    <!-- Common strings -->
    <string name="app_name">Barentswatch FiskInfo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="download">Last ned</string>
    <string name="cancel">Avbryt</string>
    <string name="register">Registrer</string>
    <string name="no_internet_access">Manglende internettforbindelse</string>

    <string name="location">Sted</string>
    <string name="cant_read_folder">Kan ikke lese mappen</string>
    <string name="nnew">Ny</string>
    <string name="select">Velg</string>
    <string name="file_name">Filnavn</string>
    <string name="create">Lagre</string>
    <string name="no_data">Ingen data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="settings">Innstillinger</string>
    
    <!-- Error strings -->
    <string name="no_folder_name">Feltet kan ikke være tomt.</string>
    
    <!-- Base activity strings -->
    <string name="title_activity_base">BaseActivity</string>
    <string name="actionbar_spinner_menu">Meny</string>
    <string name="log_out">Logg ut</string>
    <string name="confirm_log_out">Er du sikker på at du vil logge ut?</string>

    <!-- About dialog strings -->
    <string name="about_page_welcome_text">Velkommen til barentswatch Fiskinfo. Denne appen er forsatt under utvikling og funksjonaliteten som tilbys kan variere i hvorvidt den fungerer.</string>
    <string name="title_activity_about">Barentswatch FiskInfo</string>

    <!-- Help activity strings -->
    <string name="title_activity_help_activity">Barentswatch FiskInfo</string>
    <string name="help_activity_introduction">Velkommen til gjennomgang av Barentswatch FiskInfos funksjonalitet. Du kan i menyen ovenfor velge hvilken katagori du ønsker veiledning i\n
        Dersom dette er første gangen du bruker applikasjonen anbefaler vi at du tar en fullstendig gjennomgang av applikasjonens muligheter</string>
    <string name="title_file_dialog">File dialog</string>
    <string name="set_file_path">Velg lagringsmappe</string>
    
    
    
    <!-- Login dialog strings -->
    <string name="login_user_email_field_hint_string">E-postadresse</string>
    <string name="login_password_field_hint_string">Passord</string>
    <string name="login_forgot_password_textview_string">Glemt passord?</string>
    <string name="login_button_text">Logg inn</string>
    <string name="login_dialog_title">Logg inn</string>
    <string name="login_invalid_email">Ugyldig epostadresse</string>
    <string name="login_password_field_empty_string">Passordfeltet kan ikke være tomt</string>
    <string name="login_incorrect_credentials">Feil brukernavn eller passord</string>

    <!-- Mypage activity strings -->
    <string name="title_activity_my_page">Min Side</string>
    <string name="my_page_registered_vessels">Mine registrerte fartøy</string>
    <string name="my_page_registered_tools">Mine registrerte redskaper</string>
    <string name="my_page_all_available_subscriptions">Tilgjengelige abonnementer</string>
    <string name="my_page_my_maps">Mine Kart</string>
    <string name="my_page_my_notices">Mine varsler</string>
    <string name="my_page_add_vessel">Legg til nytt fartøy</string>
    <string name="my_page_add_tool">Legg til nytt redskap</string>
    <string name="my_page_add_map">Legg til nytt kart</string>
    <string name="my_page_add_notice">Legg til varsel</string>
    <string name="my_page_no_registered_vessels">Du har ingen registrerte fartøy. Klikk her for å legge til</string>
    <string name="my_page_no_registered_tools">Du har ingen registrerte redskaper. Klikk her for å legge til</string>
    <string name="my_page_service_not_available">Denne tjenesten er ikke tilgjengelig enda.</string>
    <string name="my_page_no_maps_registered">Du har ikke registrert noen kart.</string>
    <string name="my_page__no_registered_maps">Du har ingen registrerte kart. Klikk her for å legge til</string>
    <string name="my_page_no_registered_notices">Du har ingen registrerte varsler. Klikk her for å legge til</string>
    <string name="my_page_geo_data_service">geodata/service/subscribable/</string>
    <string name="my_page_my_subscriptions">geodata/subscription/</string>
    <string name="subscription_icon">Abonnementikon</string>
    <string name="subscription_name">Abonnementnavn</string>
    <string name="subscription_last_updated_colon">Sist oppdatert:</string>
    <string name="subscription_last_updated_hint">Eier</string>
    <string name="subscription_go_to_map">Se på kart</string>
    <string name="subscription_info">Informasjon om kartlaget</string>
    <string name="subscription_owner">Tjenesteeier</string>
    <string name="subscription_owner_hint">Tjenesteeier</string>
    
    <!-- Map activity strings -->
    <string name="title_activity_map">MapActivity</string>
    <string name="help_activity_button_text">Start veiledning</string>
    <string name="map_register_misc_button">Registrer redskap</string>
    <string name="map_zoom_button">Zoom til min posisjon</string>
    <string name="map_update_button">Oppdater kartet</string>
    <string name="map_export_metadata">Eksporter data</string>
    <string name="map_register_popup_text">Venligst oppgi koordinatene, og hvilket redskap som ble benyttet</string>
    <string name="map_symbol_explanation">Tegnforklaring for redskaper</string>
    <string name="map_symbol_explanation_red"> - Long line</string>
    <string name="map_symbol_explanation_blue"> - Nets</string>
    <string name="map_symbol_explanation_orange"> - Crab pot</string>
    <string name="map_symbol_explanation_brown"> - Seismic</string>
    <string name="map_symbol_explanation_darkpurple"> - Danish - Purse-Seine</string>
    <string name="map_symbol_explanation_green"> - Sensor / Cable</string>
    <string name="map_symbol_explanation_pink"> - Mooring System</string>
    <string name="map_symbol_explanation_black"> - Unknown</string>
    <string name="map_export_metadata_title">Last ned kartlag</string>
    <string name="map_export_metadata_help_text">Her kan du laste ned kartlag i forskjellige formater. Velg et kartlag og klikk last ned. Kartlaget lagres som standard i mappen Downloads/fiskinfo med mindre du har valgt en annen mappe i instillingene.</string>
    <string name="map_ocean_currents_title">Se Havstrømmene ved min posisjon</string>
    <string name="map_set_proximity_alert_title">Sett varsling</string>
    <string name="map_proximity_alert_title">Nærhetsvarsel</string>
    <string name="map_download_complete">Nedlastning fullført</string>
    <string name="map_download_failed">Nedlastningen feilet, venligst sjekk at du har plass til filen på mobilen.</string>
    <string name="polar_low">Polart lavtrykk</string>
    <string name="check_polar_low">Sjekk polart lavtrykk</string>
    <string name="check_polar_low_info">Dette er polart lavtrykksdata for din posisjon:\n</string>
    <string name="check_polar_low_error">Det oppstod en feil og vi kunne ikke finne informasjonen du så etter. Vennligst prøv igjen senere.</string>
    <string name="choose_map_layers">Velg kartlag</string>
    <string name="choose_map_layers_info">Her velger du hvilke kartlag du ser på kartet.</string>
    
    <!-- Register redskap dialog -->
    <string name="register_tool_coordinates_start_hint">Start-koordinater</string>
    <string name="register_tool_coordinates_end_hint">Slutt-koordinater</string>
    <string name="register_tool_grab_user_position_start">Bruk min posisjon</string>
    <string name="register_tool_grab_user_position_end">Bruk min posisjon</string>
    <string name="register_tool_dialog_title">Registrer redskap og posisjon</string>
    <string name="register_tool_select_projection">Velg projeksjon</string>
    <string name="register_tool_select_tool">Velg redskap</string>
    <string name="register_tool_invalid_coordinate_format">Ugyldig koordinatformat</string>
    <string name="register_tool_no_projection_selected">Ingen projekson valgt</string>
    <string name="register_tool_no_tool_selected">Ingen redskap valgt</string>
    <string name="register_tool_confirm_overwrite_title">Overskriv koordinater</string>
    <string name="register_tool_confirm_overwrite_of_coordinates_start">Er du sikker på at du vil overskrive de eksisterende start-koordinatene?</string>
    <string name="register_tool_confirm_overwrite_of_coordinates_end">Er du sikker på at du vil overskrive de eksisterende slutt-koordinatene?</string>

    <!-- Scheduled task executor dialog -->
    <string name="set_alert_watcher">Sett varsling</string>
    <string name="set_proximity_alert">Sett varsling</string>
    <string name="measuring_units">Måleenhet</string>
    <string name="proximity_radius_edit_text_hint">0.0</string>

    <!-- Proximity alert dialog -->
    <string name="proximity_alert_warning">Advarsel!</string>
    <string name="proximity_Alert_nearby_tool">Du nærmer deg et redskap!</string>
    <string name="proximity_alert_view_position">Se posisjon</string>
    <string name="proximity_alert_cancel_alert">Avslutt varsel</string>

    <string-array name="non_authenticated_user_actionbar_options">
        <item>logg inn</item>
        <item>Om</item>
        <item>Hjelp</item>
    </string-array>
    <string-array name="authenticated_user_actionbar_options">
        <item>Min side</item>
        <item>Kart</item>
        <item>Om</item>
        <item>Hjelp</item>
    </string-array>
    <string-array name="projections">
        <item>EPSG:3857</item>
        <item>EPSG:4326</item>
        <item>EPSG:23030</item>
        <item>EPSG:900913</item>
    </string-array>
    <string-array name="tool_types">
        <item>Long line</item>
        <item>Nets</item>
        <item>Crab pots</item>
        <item>Seismic</item>
        <item>Danish - /Purse-Seine</item>
        <item>Sensor / Cable</item>
        <item>Mooring system</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="measurement_units">
        <item>Meter</item>
        <item>Nautiske mil</item>
    </string-array>

    <string name="title_activity_alarm_activity">Barentswatch FiskInfo</string>

</resources>