
<!--
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	
		<TextView 
		    android:id="@+id/choose_map_layers_info_text_view"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="@dimen/map_layer_linear_layout_margin_left"
		    android:layout_marginRight="@dimen/map_layer_linear_layout_margin_right"
		    android:layout_marginStart="@dimen/map_layer_linear_layout_margin_left" 
		    android:layout_marginEnd="@dimen/map_layer_linear_layout_margin_right"
		    android:text="@string/choose_map_layers_info"/>
	
		<LinearLayout android:id="@+id/map_layers_checkbox_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="@dimen/map_layer_linear_layout_margin_left"
		    android:layout_marginRight="@dimen/map_layer_linear_layout_margin_right"
		    android:layout_marginStart="@dimen/map_layer_linear_layout_margin_left" 
		    android:layout_marginEnd="@dimen/map_layer_linear_layout_margin_right"
	        android:layout_below="@+id/choose_map_layers_info_text_view"
		    android:orientation="vertical">
		</LinearLayout>
		
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/map_layers_checkbox_layout"
	        android:layout_marginTop="@dimen/subscription_dialog_margin_bottom_button"
	        android:orientation="horizontal"
	        android:paddingBottom="1.0dip"
	        android:paddingLeft="4.0dip"
	        android:paddingRight="4.0dip"
	        android:paddingTop="5.0dip" >
	
	        <Button
	            android:id="@+id/dismiss_dialog_button"
	            android:layout_width="0.0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@string/ok" />
	
	        <Button
	            android:id="@+id/go_to_map_button"
	            android:layout_width="0.0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@string/cancel" />
	    </LinearLayout>
	
	</RelativeLayout>
</ScrollView>